# handycpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: handycppConfig.cmake.in
include/handycpp/: almost_all.h  archive.h  dyntype.h  event_loop.h  exec.h  file.h  flags.h  human_readable.h  image.h  logging.h  signal_slot.h  stb_image.h  stb_image_write.h  string.h  syntax.h  time.h
src/: image.cpp
test/: test.cpp
